# api-reclamos-abc

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/api_reclamos/: config.py  database.py  deps.py  main.py
src/api_reclamos/models/: asignaciones.py  catalogos.py  evidencias.py  movimientos.py  reclamos.py  revisores.py
src/api_reclamos/routers/: asignaciones.py  catalogos.py  evidencias.py  movimientos.py  reclamos.py  revisores.py
src/api_reclamos/schemas/: asignaciones.py  catalogos.py  evidencias.py  movimientos.py  reclamos.py  revisores.py
src/api_reclamos/utils/: pagination.py
